<resources>
    <string name="app_name">My Health</string>

    <string name="Email">Email</string>
    <string name="pwd">Password</string>
    <string name="pwd_conf">Confirm Password</string>
    <string name="forget_pwd">Forgot Password</string>
    <string name="error_message">Error Message will appear here</string>
    <string name="login">Login</string>
    <string name="register">New Registration</string>
    <string name="register_btn">Register</string>
    <string name="register_already">Already Registered? Click to Login</string>
    <string name="user_name">Full Name</string>
    <string name="phone_no">Phone Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>